--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -6,7 +6,7 @@ build_requires:
   Test::More: 1.001
 configure_requires:
   ExtUtils::MakeMaker: 0
-dynamic_config: 1
+dynamic_config: 0
 generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
@@ -23,7 +23,7 @@ resources:
   repository: http://code.google.com/p/perl-class-date/
 version: v1.1.11
 x_contributors:
-  - 'dLux (Szabó, Balázs) <dlux@dlux.hu>'
+  - 'dLux (SzabÃ³, BalÃ¡zs) <dlux@dlux.hu>'
   - 'Matt Sergeant <matt@sergeant.org>'
   - 'Tatsuhiko Miyagawa <miyagawa@cpan.org>'
   - 'Stas Bekman <stas@stason.org>'
